Improve Loading & Smelt/Turbo Breaker Enchant